[package]
name = "validador"
version = "1.0.0"
edition = "2024"
authors = ["Ian Cunha Moura <iancunha20@gmail.com>"]
description = "Validador de CPF e CNPJ"
license = "MIT"
repository = "https://github.com/ian-cunha/validador-crate-rust.git"
documentation = "https://github.com/ian-cunha/validador-crate-rust/blob/main/README.md"
homepage = "https://github.com/ian-cunha/validador-crate-rust"

[dependencies]
